[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molt"
version = "0.0.001"
description = "Molt: A verified subset Python to native/WASM compiler."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "packaging>=26.2",
    "rich>=15.0.0",
    "ty>=0.0.53",
]

[project.scripts]
molt = "molt.cli:main"

[project.entry-points.pytest11]
molt_memory_guard = "molt.pytest_memory_guard_bootstrap"

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["third_party", "tests/differential", "tests/harness/corpus"]

[tool.ruff.lint.per-file-ignores]
"src/molt/stdlib/**/*.py" = ["E402"]
"src/molt/stdlib/_pyio.py" = ["E722", "F401"]  # CPython mirror: finalizer suppression and __all__ re-export.
"src/molt/stdlib/builtins.py" = ["F821"]       # Runtime-provided builtins can be version-gated ahead of host Python.
"src/molt/stdlib/colorsys.py" = ["E741"]
"src/molt/stdlib/calendar.py" = ["F822"]       # @global_enum exports enum members into module globals.
"src/molt/stdlib/copyreg.py" = ["F401"]
"src/molt/stdlib/ctypes/_endian.py" = ["F821"]
"src/molt/stdlib/ctypes/wintypes.py" = ["F821"]
"src/molt/stdlib/email/quoprimime.py" = ["F401"]
"src/molt/stdlib/encodings/mac_arabic.py" = ["F601"]
"src/molt/stdlib/encodings/punycode.py" = ["E741"]
"src/molt/stdlib/encodings/quopri_codec.py" = ["F401"]
"src/molt/stdlib/http/client.py" = ["F822"]
"src/molt/stdlib/mimetypes.py" = ["E731"]      # CPython mirror keeps local callback lambdas.
"src/molt/stdlib/site.py" = ["F401"]           # Imports intentionally execute customization hooks.
"src/molt/stdlib/unittest/mock.py" = ["E722", "E731"] # CPython mirror preserves mock callback/finalizer shape.
"src/molt/stdlib/xml/etree/cElementTree.py" = ["F403"] # Deprecated CPython alias re-exports ElementTree.
"src/molt/stdlib/_sys_impl.py" = ["F822"]  # __all__ names are bootstrap-populated.
"src/molt/stdlib/sys.py" = ["F822"]        # __all__ names are bootstrap-populated.
"examples/cloudflare-demo/src/app.py" = ["E402"]  # Route handlers intentionally follow large GPT weights.
"tests/e2e/falcon_ocr_baseline.py" = ["E402"]     # Standalone script path setup precedes sibling imports.
"tests/e2e/test_falcon_ocr_parity.py" = ["E402"]  # Standalone script path setup precedes sibling imports.
"tests/e2e/test_falcon_ocr_real.py" = ["E402"]    # Standalone script path setup precedes sibling imports.
"tests/e2e/test_falcon_ocr_targets.py" = ["E402"] # Standalone script path setup precedes sibling imports.
"tests/parity/**/*.py" = ["E402", "E731"]         # Executable parity scripts test import timing/order and syntax forms.
"tests/parity/test_exceptions.py" = ["E402", "E722"]  # Bare except is parity corpus input.
"tests/runtime_compat/scripts/*.py" = ["E402"]    # Harness scripts are executed directly by compatibility runner.

[tool.ty.src]
exclude = ["src/molt/stdlib/**", "stdlib/**", "tests/differential/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tmp/pytest-cache"
addopts = [
    "-p",
    "molt.pytest_memory_guard_config_plugin",
    "--ignore=tests/differential",
    "--ignore=tests/molt_only",
    "--ignore=tests/compliance",
]
norecursedirs = ["third_party", ".git", ".venv", ".molt-venv", ".hypothesis", "dist", "build", "logs"]
markers = [
    "molt_compile: tests that require a working Molt compiler (use --run-molt)",
    "slow: tests that exercise longer end-to-end toolchain paths",
]

[tool.molt.deps]
tier_a = ["attrs", "click", "pydantic", "requests", "rich", "ty"]
tier_b = ["orjson", "pydantic-core", "polars", "pyarrow", "ruff"]
tier_c = ["numpy", "pandas", "scipy", "tensorflow", "torch"]
native_wheels = ["cbor2", "cryptography", "msgpack"]

[tool.molt.dx]
python = "3.12"
cargo_profile = "release-fast"
backend_package = "molt-backend"
backend_features = ["native-backend"]
cargo_build_jobs = 2
backend_daemon = true
prefer_external_artifacts = true

[tool.molt.dx.env]
MOLT_EXT_ROOT = "{artifact_root}"
MOLT_CACHE = "{artifact_root}/.molt_cache"
MOLT_DIFF_ROOT = "{artifact_root}/tmp/diff"
MOLT_DIFF_TMPDIR = "{artifact_root}/tmp"
UV_CACHE_DIR = "{artifact_root}/.uv-cache"
TMPDIR = "{artifact_root}/tmp"
PYTHONPATH = "{root}/src"

[tool.molt.dx.commands]
install = "uv sync --group dev --group bench --python 3.12"
clippy-backend = "cargo clippy -p molt-backend --features native-backend -- -D warnings"
clippy-tir = "cargo clippy -p molt-tir --all-targets --all-features -- -D warnings"
clippy = [
    "@clippy-backend",
    "@clippy-tir",
]
security = "cargo deny check"
build = "cargo build --profile release-fast --workspace"
backend = "cargo test --profile release-fast -p molt-backend --features native-backend --lib"
compliance = "{project_python} -m pytest tests/compliance/ -p no:cacheprovider -n auto --tb=line -q"
clean-artifacts = "{project_python} tools/artifact_cleanup.py"
bench-smoke = "{project_python} -m molt.cli bench -- --smoke --warmup 1 --json-out bench/results/dev-bench-smoke.json"
rustfmt = "{project_python} tools/check_rustfmt.py --changed --write"
rustfmt-check = "{project_python} tools/check_rustfmt.py --changed"
rust-toolchain-check = "{project_python} tools/check_rust_toolchain.py"
format = [
    "{project_python} -m ruff format .",
    "@rustfmt",
]
format-check = [
    "{project_python} -m ruff format --check .",
    "@rustfmt-check",
]
subprocess-guard-audit = "{project_python} tools/check_subprocess_guard_coverage.py"
memory-guard-wiring-audit = "{project_python} tools/check_memory_guard_wiring.py"
dev-tooling-test = "{project_python} -m pytest -q -p no:cacheprovider tests/test_molt_dev.py"
lint = [
    "{project_python} -m ruff check .",
    "@rust-toolchain-check",
    "@format-check",
    "{project_python} -m ty check src",
    "{project_python} tools/verified_subset.py check",
    "{project_python} tools/check_stdlib_intrinsics.py --fallback-intrinsic-backed-only",
    "{project_python} tools/check_stdlib_intrinsics.py --critical-allowlist",
    "{project_python} tools/check_dynamic_policy.py",
    "{project_python} tools/check_ecosystem_compat.py",
    "{project_python} tools/check_suite_honesty.py",
    "{project_python} tools/gen_op_kinds.py --check",
    "{project_python} tools/audit_op_kinds.py --check",
    "{project_python} tools/gen_wasm_abi.py --check",
    "{project_python} tools/llvm_runtime_abi_audit.py --check",
    "@subprocess-guard-audit",
    "@memory-guard-wiring-audit",
    "@dev-tooling-test",
    "{project_python} tools/update_status_blocks.py --check",
    "{project_python} tools/check_docs_architecture.py",
    "{project_python} tools/check_core_lane_lowering.py --manifest tests/differential/basic/CORE_TESTS.txt",
    "{project_python} -m molt.cli debug verify --format json",
]
gates = [
    "@clippy",
    "@security",
    "@build",
    "@backend",
    "@compliance",
]

[dependency-groups]
bench = [
    "setuptools>=80.9.0",
    # pyperformance v1.14.0 corpus (pinned to bench/friends/manifest.toml repo_ref);
    # pulls pyperf. `uv sync --group bench` to run the pyperformance lane directly.
    # codon (exaloop.io/install.sh, Linux/macOS) and pypy (`uv --python pypy`) are
    # optional reference engines installed out-of-band; their lanes self-skip when
    # absent. See bench/corpus/README.md.
    "pyperformance==1.14.0",
]
dev = [
    "cbor2>=6.1.2",
    "msgpack>=1.2.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "ty>=0.0.53",
    "setuptools>=80.9.0",
    "django>=6.0.6",
    "idna>=3.18",
    "stdlib-list>=0.12.0",
    "coverage>=7.14.3",
    "pip-audit>=2.10.1",
    "py-spy>=0.4.2",
    "hypothesis>=6.155.7",
    "urllib3>=2.7.0",
    "pytest-xdist>=3.8.0",
]
demo = [
    "django>=6.0.6",
    "gunicorn>=26.0.0",
    "msgpack>=1.2.1",
    "uvicorn>=0.49.0",
]

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*"]}}

[project.optional-dependencies]
accel = [
    "msgpack>=1.2.1",
]

[tool.setuptools.package-data]
"molt_accel" = ["py.typed", "default_exports.json"]
