[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molt-demo"
version = "0.0.1"
description = "Django offload demo for Molt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0",
  "molt==0.1.0",
  "msgpack>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]
