[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molt-demo"
version = "0.0.1"
description = "Django offload demo for Molt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=6.0.6",
  "molt",
  "msgpack>=1.2.1",
]

[tool.uv.sources]
molt = { path = "..", editable = true }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]
