[workspace]
resolver = "2"
members = [
    "molt-obj-model",
    "molt-runtime-core",
    "molt-runtime-tk",
    "molt-runtime-compression",
    "molt-runtime",
    "molt-backend",
    "molt-wasm-host",
    "molt-db",
    "molt-cpython-abi",
]

[workspace.dependencies]
# Pin shared deps to prevent version drift
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.21"
memchr = "2.8"
serde_json = "1.0"
