[workspace]
resolver = "2"
members = [
    "molt-obj-model",
    "molt-runtime-core",
    "molt-runtime-tk",
    "molt-runtime-compression",
    "molt-runtime-crypto",
    "molt-runtime-net",
    "molt-runtime-asyncio",
    "molt-runtime-math",
    "molt-runtime-serial",
    "molt-runtime-regex",
    "molt-runtime-path",
    "molt-runtime-text",
    "molt-runtime-difflib",
    "molt-runtime-logging",
    "molt-runtime-http",
    "molt-runtime-xml",
    "molt-runtime-ipaddress",
    "molt-runtime-zoneinfo",
    "molt-runtime-protobuf",
    "molt-runtime",
    "molt-backend",
    "molt-backend-native",
    "molt-backend-luau",
    "molt-backend-rust",
    "molt-wasm-host",
    "molt-db",
    "molt-cpython-abi",
    "molt-snapshot",
]

[workspace.dependencies]
# Pin shared deps to prevent version drift
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.21"
memchr = "2.8"
# Correctly rounded decimal float parsing for JSON IR/runtime values. Without
# float_roundtrip, hard CPython float literals can double-round by 1 ULP.
serde_json = { version = "1.0", features = ["float_roundtrip"] }

# ---------------------------------------------------------------------------
# Release profile: LTO + single codegen unit + strip for minimal binary size.
# With full LTO the linker sees across the user-code / runtime boundary and
# can dead-strip everything unreachable from main().
# ---------------------------------------------------------------------------
[profile.release]
lto = "thin"
codegen-units = 4
strip = "symbols"
opt-level = "z"        # optimise for size over speed
panic = "abort"        # no unwind tables

# Keep dev builds fast — no LTO, parallel codegen.
[profile.dev]
lto = false
codegen-units = 16

[profile.dev-release]
inherits = "release"
lto = "thin"
codegen-units = 4
strip = "symbols"
