[package]
name = "molt-backend-luau"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"

[dependencies]
molt-ir = { path = "../molt-ir" }
molt-tir = { path = "../molt-tir" }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
luau-backend = []
