[package]
name = "molt-backend"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
libc = "0.2"
cranelift-codegen = { version = "0.130.0", optional = true, default-features = false, features = ["host-arch", "std", "unwind"] }
cranelift-frontend = { version = "0.130.0", optional = true }
cranelift-module = { version = "0.130.0", optional = true }
cranelift-object = { version = "0.130.0", optional = true }
cranelift-native = { version = "0.130.0", optional = true }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
ciborium = { version = "0.2", optional = true }
wasm-encoder = { version = "0.245.1", optional = true }
wasmparser = { version = "0.245.1", optional = true }
egg = { version = "0.11", optional = true }
inkwell = { version = "0.8", features = ["llvm21-1"], optional = true }
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
cudarc = { version = "0.19", optional = true }
melior = { version = "0.27", optional = true }
mlx-rs = { version = "0.25", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33", optional = true }
objc = { version = "0.2", optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cranelift-codegen = { version = "0.130.0", optional = true, default-features = false, features = ["x86"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cranelift-codegen = { version = "0.130.0", optional = true, default-features = false, features = ["arm64"] }

[features]
default = ["native-backend"]
egraphs = ["egg"]
llvm = ["dep:inkwell"]
luau-backend = []
native-backend = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-object",
    "dep:cranelift-native",
]
cbor = ["dep:ciborium"]
rust-backend = []
gpu-metal = ["dep:metal", "dep:objc"]
gpu-webgpu = ["dep:wgpu", "dep:pollster"]
gpu-cuda = ["dep:cudarc"]
mlir = ["dep:melior"]
mlx = ["dep:mlx-rs"]
wasm-backend = ["dep:wasm-encoder", "dep:wasmparser"]

[[test]]
name = "jumpful_malformed_control"
required-features = ["wasm-backend"]

[[test]]
name = "loop_continue"
required-features = ["native-backend"]

[[test]]
name = "rust_transpiler_preview"
required-features = ["rust-backend"]

[[test]]
name = "wasm_fastcall_lowering"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_import_registry"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_import_filtering"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_compilation"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_data_segments"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_type_section"
required-features = ["wasm-backend"]

[[test]]
name = "cbor_round_trip"
required-features = ["cbor"]
