[package]
name = "molt-backend"
version = "0.1.0"
publish = false
edition = "2024"
license = "Apache-2.0"

[dependencies]
molt-ir = { path = "../molt-ir" }
molt-tir = { path = "../molt-tir" }
molt-backend-native = { path = "../molt-backend-native", optional = true, default-features = false }
molt-backend-luau = { path = "../molt-backend-luau", optional = true, default-features = false }
molt-backend-rust = { path = "../molt-backend-rust", optional = true, default-features = false }
molt-backend-wasm = { path = "../molt-backend-wasm", optional = true, default-features = false }
libc = "0.2"
tikv-jemallocator = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.11"
object = { version = "0.39", default-features = false, features = ["read", "std"] }
rmp-serde = "1"
ciborium = { version = "0.2", optional = true }
egg = { version = "0.11", optional = true }
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
cudarc = { version = "0.19", optional = true, default-features = false, features = ["driver", "dynamic-loading", "cuda-12080"] }
mlx-rs = { version = "0.25", optional = true }

[dev-dependencies]
# Re-import molt-tir with the test-util feature so molt-backend's own tests can
# reach the crate-private accessor seams (representation-plan / tir-cache /
# value-range) that molt-tir exposes only under #[cfg(any(test, feature = "test-util"))].
molt-tir = { path = "../molt-tir", features = ["test-util"] }
molt-backend-wasm = { path = "../molt-backend-wasm", default-features = false, features = ["test-util"] }
wasm-encoder = "0.252.0"
wasmparser = "0.252.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.33", optional = true }
objc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[features]
default = ["native-backend"]
jemalloc = ["dep:tikv-jemallocator"]
egraphs = ["egg"]
llvm = ["dep:molt-backend-native", "molt-backend-native/llvm"]
polly = ["llvm", "molt-backend-native/polly"]
luau-backend = ["dep:molt-backend-luau", "molt-backend-luau/luau-backend"]
native-backend = [
    "dep:molt-backend-native",
    "molt-backend-native/native-backend",
]
cbor = ["dep:ciborium"]
rust-backend = ["dep:molt-backend-rust", "molt-backend-rust/rust-backend"]
mlx = ["dep:mlx-rs"]
wasm-backend = [
    "dep:molt-backend-wasm",
    "molt-backend-wasm/wasm-backend",
    "molt-ir/wasm-backend",
    "molt-tir/wasm-backend",
]

[[test]]
name = "jumpful_malformed_control"
required-features = ["wasm-backend"]

[[test]]
name = "loop_continue"
required-features = ["native-backend"]

[[test]]
name = "native_batch_worker_spawn"
required-features = ["native-backend"]

[[test]]
name = "wasm_fastcall_lowering"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_import_registry"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_import_filtering"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_compilation"
required-features = ["wasm-backend"]

[[test]]
name = "lir_wasm_repr_regressions"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_data_segments"
required-features = ["wasm-backend"]

[[test]]
name = "wasm_type_section"
required-features = ["wasm-backend"]

[[test]]
name = "cbor_round_trip"
required-features = ["cbor"]
