[package]
name = "molt-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tokio = { version = "1.37", features = ["macros", "rt", "sync", "time"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2.1", optional = true }

[features]
default = []
async = ["tokio"]
postgres = [
    "async",
    "tokio-postgres",
    "tokio-postgres-rustls",
    "rustls",
    "rustls-native-certs",
    "rustls-pemfile",
]
sqlite = ["rusqlite"]
