[package]
name = "molt-db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["macros", "rt", "sync", "time"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

[features]
default = []
async = ["tokio"]
postgres = [
    "async",
    "tokio-postgres",
    "tokio-postgres-rustls",
    "rustls",
    "rustls-native-certs",
    "rustls-pemfile",
]
sqlite = ["rusqlite"]
