[package]
name = "molt-embed"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Embeddable Python-to-WASM/native compilation SDK for Molt"

[dependencies]
molt-runtime = { path = "../molt-runtime", default-features = false, features = ["stdlib_micro"] }
