[package]
name = "molt-ffi"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Stable C API for Molt runtime intrinsics — enables cross-runtime stdlib access"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["runtime_linked"]
runtime_linked = ["dep:molt-runtime"]

[dependencies]
molt-runtime = { path = "../molt-runtime", default-features = false, features = ["stdlib_micro"], optional = true }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }
