[package]
name = "molt-ir"
version = "0.1.0"
publish = false
edition = "2024"
license = "Apache-2.0"

# Leaf IR vocabulary and SimpleIR transport for the compiler crate graph
# decomposition. This crate must stay free of workspace dependencies so parser,
# pass, lowering, backend, and binary-analysis work can share one immutable IR
# authority without recompiling the whole pipeline.

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1"

[features]
default = []
native-backend = []
llvm = []
wasm-backend = []
test-util = []
