[package]
name = "molt-lang-obj-model"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
# Future: smallvec, hashbrown

[dev-dependencies]
criterion = "0.8"
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[[bench]]
name = "ptr_registry"
harness = false
