[package]
name = "molt-passes"
version = "0.1.0"
publish = false
edition = "2024"
license = "Apache-2.0"

# Pass/fact/orchestration layer. This crate depends only on the immutable IR
# vocabulary in molt-ir plus std/data dependencies needed by analyses and cache
# logic. Lowering and backend crates consume this layer; it never depends on
# lowering or backend code.

[dependencies]
libc = "0.2"
molt-ir = { path = "../molt-ir" }
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = "1"
sha2 = "0.11"

[features]
default = []
native-backend = ["molt-ir/native-backend"]
llvm = ["molt-ir/llvm"]
wasm-backend = ["molt-ir/wasm-backend"]
test-util = ["molt-ir/test-util"]
