[package]
name = "molt-lang-python"
version = "0.0.1"
publish = false
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Public Rust entrypoint and release-coordinate helpers for the Molt compiler project."
readme = "README.md"
homepage = "https://github.com/adpena/molt"
repository = "https://github.com/adpena/molt"
documentation = "https://docs.rs/molt-lang-python"
keywords = ["python", "compiler", "wasm", "cloudflare", "aot"]
categories = ["compilers", "wasm"]

[features]
default = ["backend", "runtime"]
backend = ["dep:molt-lang-backend"]
db = ["dep:molt-lang-db"]
db-async = ["db", "molt-lang-db/async"]
db-postgres = ["db", "molt-lang-db/postgres"]
db-sqlite = ["db", "molt-lang-db/sqlite"]
obj-model = ["dep:molt-lang-obj-model"]
runtime = ["dep:molt-lang-runtime"]

[dependencies]
molt-lang-backend = { path = "../molt-backend", version = "0.1.0", optional = true }
molt-lang-db = { path = "../molt-db", version = "0.1.0", optional = true }
molt-lang-obj-model = { path = "../molt-obj-model", version = "0.1.0", optional = true }
molt-lang-runtime = { path = "../molt-runtime", version = "0.1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
