[package]
name = "molt-runtime-collections"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Collections and container intrinsics for the Molt runtime (OrderedDict, defaultdict, deque, Counter, ChainMap, argparse)"

[dependencies]
# Core runtime types used by the collection implementations
molt-runtime-core = { path = "../molt-runtime-core" }
molt-obj-model = { package = "molt-lang-obj-model", path = "../molt-obj-model" }
